DISABLED added to status